--- a/_config.yml
+++ b/_config.yml
@@ -15,20 +15,20 @@ author:
   facebook:          ""
   linkedin:          ""
 navigation:
-- title: Blogs
-  url: /Blogs
 - title: Archives
   url: /Archives
+- title: Book&Papers
+  url: /BooksnPapers
 - title: Diary
   url: /Diary
-- title: Links(others)
-  url: /Links(others)
-- title: Search
-  url: /Search
+- title: Life
+  url: /Life
+- title: Links
+  url: /Links
 - title: AboutMe
   url: /AboutMe
 
-paginate:            5
+paginate:            6
 disqus:              #"your-disqus"
 
 # Build settings
