Add Stock category and update 10/8 stock diary

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ navigation:
   url: /BooksnPapers
 - title: Diary
   url: /Diary
-- title: Life
-  url: /Life
+- title: Stock
+  url: /Stock
 - title: Links
   url: /Links
 - title: AboutMe
