--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ navigation:
   url: /Diary
 - title: Stock
   url: /Stock
+- title: Hobby
+  url: /Hobby
 - title: Links
   url: /Links
 - title: AboutMe
